Get deps for all three platforms

--- a/pipelines/release.yml
+++ b/pipelines/release.yml
@@ -968,7 +968,9 @@ jobs:
               export GOPATH="$PWD"
               mkdir -p src/code.cloudfoundry.org
               cp -R "$WORKSPACE/log-cache-cli/" src/code.cloudfoundry.org
-              go get ./...
+              GOOS=linux go get ./...
+              GOOS=darwin go get ./...
+              GOOS=windows go get ./...
             popd
 
             mkdir github-release/builds
