Only download deps, don't try to build them
Signed-off-by: Jason Keene <jkeene@pivotal.io>

--- a/pipelines/release.yml
+++ b/pipelines/release.yml
@@ -968,9 +968,9 @@ jobs:
               export GOPATH="$PWD"
               mkdir -p src/code.cloudfoundry.org
               cp -R "$WORKSPACE/log-cache-cli/" src/code.cloudfoundry.org
-              GOOS=linux go get ./...
-              GOOS=darwin go get ./...
-              GOOS=windows go get ./...
+              GOOS=linux go get -d ./...
+              GOOS=darwin go get -d ./...
+              GOOS=windows go get -d ./...
             popd
 
             mkdir github-release/builds
