--- a/pipelines/pws-us-blackbox-tests.yml
+++ b/pipelines/pws-us-blackbox-tests.yml
@@ -340,6 +340,7 @@ jobs:
       CLIENT_SECRET: {{pws-firehose-reliability-client-secret}}
       WORKER_INSTANCE_COUNT: 14
       APP_WS_PORT: 4443
+    timeout: 5m
 
 - name: log-cache
   public: false
