Fix bbl state dir
Signed-off-by: Warren Fernandes <wfernandes@pivotal.io>

--- a/pipelines/playground.yml
+++ b/pipelines/playground.yml
@@ -276,6 +276,7 @@ jobs:
     params:
       DEPLOYMENT_NAME: cfcr
       ERRAND_NAME: apply-addons
+      BBL_STATE_DIR: gcp/playground
   - task: prepare-certs
     config:
       platform: linux
