--- a/pipelines/playground.yml
+++ b/pipelines/playground.yml
@@ -3,7 +3,7 @@ groups:
   jobs:
   - cfcr-deploy
   - cf-deploy
-  - deploy-datadog-accumulator
+  - deploy-datadog-forwarder
   - log-cache-blackbox
   - cfcr-destroy
   - cf-destroy
@@ -557,17 +557,17 @@ jobs:
         BBL_STATE_DIR: gcp/playground
         DEPLOYMENT_NAME: cf-syslog-drain
 
-- name: deploy-datadog-accumulator
+- name: deploy-datadog-forwarder
   public: false
   serial: true
   plan:
   - aggregate:
     - get: loggregator-tools
     - get: loggregator-ci
-  - task: deploy-datadog-accumulator
-    file: loggregator-ci/tasks/datadog-accumulator/task.yml
+  - task: deploy-datadog-forwarder
+    file: loggregator-ci/tasks/datadog-forwarder/task.yml
     params:
-      APP_NAME: "datadog-accumulator"
+      APP_NAME: "datadog-forwarder"
       SYSTEM_DOMAIN: "playground.loggr.cf-app.com"
       DATADOG_API_KEY: {{datadog-loggregator-api-key}}
       DATADOG_TAGS: accumulator-playground
@@ -577,7 +577,7 @@ jobs:
       USERNAME: {{playground-username}}
       PASSWORD: {{playground-password}}
       LOG_CACHE_HTTP_ADDR: http://log-cache.playground.loggr.cf-app.com
-      LOG_CACHE_GROUP_NAME: playground-datadog-accumulator
+      LOG_CACHE_GROUP_NAME: playground-datadog-forwarder
       UAA_CLIENT: {{playground-uaa-client}}
       UAA_CLIENT_SECRET: {{playground-uaa-client-secret}}
 
