genericize pool lock into  field
[#157257263]

--- a/tasks/upload-release/task.yml
+++ b/tasks/upload-release/task.yml
@@ -13,6 +13,7 @@ inputs:
 - name: loggregator-ci # - This repo
 - name: bbl-state  # - The Director's `bbl-state.json`
 - name: bosh-release-dir  # - The release to upload
+- name: environment
 
 run:
   path: loggregator-ci/tasks/upload-release/task
