--- a/pipelines/coconut-blackbox-tests.yml
+++ b/pipelines/coconut-blackbox-tests.yml
@@ -284,6 +284,21 @@ jobs:
     - get: 10m
       trigger: true
   - aggregate:
+    - task: push-datadog-accumulator
+      file: loggregator-ci/tasks/datadog-accumulator/task.yml
+      params:
+        APP_NAME: "log-cache-data-dog-accumulator"
+        SYSTEM_DOMAIN: "coconut.cf-app.com"
+        DATADOG_API_KEY: {{datadog-loggregator-api-key}}
+        ORG: system
+        SPACE: blackbox-testing
+        USERNAME: {{coconut-username}}
+        PASSWORD: {{coconut-password}}
+        LOG_CACHE_HTTP_ADDR: https://log-cache.coconut.cf-app.com
+        LOG_CACHE_GROUP_NAME: "log-cache-datadog-accumulator"
+        LOG_CACHE_SOURCE_ID_WHITELIST: log-cache
+        UAA_CLIENT: {{coconut-uaa-client}}
+        UAA_CLIENT_SECRET: {{coconut-uaa-client-secret}}
     - task: push-request-spinner
       file: loggregator-ci/tasks/log-cache-request-spinner-push/task.yml
       params:
