Allow for sub-packages in docker image task
[#157283181]

Signed-off-by: Warren Fernandes <wfernandes@pivotal.io>

--- a/tasks/build-docker-image/task.yml
+++ b/tasks/build-docker-image/task.yml
@@ -13,6 +13,9 @@ params:
   # - The base package for the Go source repo
   BASE_PACKAGE:
 
+  # - The sub-package, relative to the BASE_PACKAGE that is being built.
+  SUB_PACKAGE:
+
   # - Required
   # - The name of the directory in docker-images that contains the Dockerfile
   #   and the build_bin.sh
