--- a/pipelines/playground.yml
+++ b/pipelines/playground.yml
@@ -587,26 +587,28 @@ jobs:
   plan:
   - aggregate:
     - get: loggregator-tools
+    - get: deployments-loggregator
     - get: loggregator-ci
     - get: 10m
       trigger: true
-  - task: cf-log-cache-blackbox-tests
-    file: loggregator-ci/tasks/cf-log-cache-blackbox/task.yml
-    params:
-      APP_ADDR: "log-cache-blackbox.playground.loggr.cf-app.com"
-      APP_NAME: "log-cache-blackbox"
-      SYSTEM_DOMAIN: "playground.loggr.cf-app.com"
-      DATADOG_API_KEY: {{datadog-loggregator-api-key}}
-      LOG_CACHE_URL: http://log-cache.playground.loggr.cf-app.com
-      ORG: system
-      SPACE: blackbox-testing
-      SKIP_SSL_VALIDATION: true
-      USERNAME: {{playground-username}}
-      PASSWORD: {{playground-password}}
-      UAA_CLIENT: {{playground-uaa-client}}
-      UAA_CLIENT_SECRET: {{playground-uaa-client-secret}}
-  - task: k8s-log-cache-blackbox-tests
-    file: loggregator-ci/tasks/k8s-log-cache-blackbox/task.yml
-    params:
-      DATADOG_API_KEY: {{datadog-loggregator-api-key}}
-      SKIP_SSL_VALIDATION: true
+  - aggregate:
+    - task: cf-log-cache-blackbox-tests
+      file: loggregator-ci/tasks/cf-log-cache-blackbox/task.yml
+      params:
+        APP_ADDR: "log-cache-blackbox.playground.loggr.cf-app.com"
+        APP_NAME: "log-cache-blackbox"
+        SYSTEM_DOMAIN: "playground.loggr.cf-app.com"
+        DATADOG_API_KEY: {{datadog-loggregator-api-key}}
+        LOG_CACHE_URL: http://log-cache.playground.loggr.cf-app.com
+        ORG: system
+        SPACE: blackbox-testing
+        SKIP_SSL_VALIDATION: true
+        USERNAME: {{playground-username}}
+        PASSWORD: {{playground-password}}
+        UAA_CLIENT: {{playground-uaa-client}}
+        UAA_CLIENT_SECRET: {{playground-uaa-client-secret}}
+    - task: k8s-log-cache-blackbox-tests
+      file: loggregator-ci/tasks/k8s-log-cache-blackbox/task.yml
+      params:
+        DATADOG_API_KEY: {{datadog-loggregator-api-key}}
+        SKIP_SSL_VALIDATION: true
