--- a/pipelines/playground-blackbox-tests.yml
+++ b/pipelines/playground-blackbox-tests.yml
@@ -1,4 +1,8 @@
 resources:
+- name: 10m
+  type: time
+  source: {interval: 10m}
+
 - name: 15m
   type: time
   source: {interval: 15m}
@@ -11,6 +15,11 @@ resources:
   type: git
   source:
     uri: https://github.com/cloudfoundry/loggregator-ci
+
+- name: loggregator-tools
+  type: git
+  source:
+    uri: https://github.com/cloudfoundry-incubator/loggregator-tools
 
 - name: deployments-loggregator
   type: git
@@ -80,3 +89,34 @@ jobs:
       MESSAGE: "HOURLY"
     timeout: 15m
 
+- name: log-cache-blackbox
+  public: false
+  serial: true
+  plan:
+  - aggregate:
+    - get: loggregator-tools
+    - get: deployments-loggregator
+    - get: loggregator-ci
+    - get: 10m
+      trigger: true
+  - aggregate:
+    - task: cf-log-cache-blackbox-tests
+      file: loggregator-ci/tasks/cf-log-cache-blackbox/task.yml
+      params:
+        APP_ADDR: "log-cache-blackbox.playground.loggr.cf-app.com"
+        APP_NAME: "log-cache-blackbox"
+        SYSTEM_DOMAIN: "playground.loggr.cf-app.com"
+        DATADOG_API_KEY: {{datadog-loggregator-api-key}}
+        LOG_CACHE_URL: http://log-cache.playground.loggr.cf-app.com
+        ORG: system
+        SPACE: blackbox-testing
+        SKIP_SSL_VALIDATION: true
+        USERNAME: {{playground-username}}
+        PASSWORD: {{playground-password}}
+        UAA_CLIENT: {{playground-uaa-client}}
+        UAA_CLIENT_SECRET: {{playground-uaa-client-secret}}
+    - task: k8s-log-cache-blackbox-tests
+      file: loggregator-ci/tasks/k8s-log-cache-blackbox/task.yml
+      params:
+        DATADOG_API_KEY: {{datadog-loggregator-api-key}}
+        SKIP_SSL_VALIDATION: true
