Refactor: rename blackbox task to cf-blackbox
[#157433670]

Signed-off-by: Warren Fernandes <wfernandes@pivotal.io>

--- a/tasks/cf-blackbox/task.yml
+++ b/tasks/cf-blackbox/task.yml
@@ -13,4 +13,4 @@ params:
   DELAY: 20
   DELAY_UNIT: ms
 run:
-  path: loggregator-ci/tasks/blackbox/task.sh
+  path: loggregator-ci/tasks/cf-blackbox/task
