--- a/docker-images/router/Dockerfile
+++ b/docker-images/router/Dockerfile
@@ -23,8 +23,8 @@ ENV ROUTER_CERT_FILE="/srv/certs/router.crt" \
     ROUTER_PORT="8082" \
     ROUTER_PPROF_PORT="6060" \
     ROUTER_HEALTH_ADDR=":6061" \
-    AGENT_UDP_ADDRESS="3457" \
-    AGENT_GRPC_ADDRESS="3458"
+    AGENT_UDP_ADDRESS="localhost:3457" \
+    AGENT_GRPC_ADDRESS="localhost:3458"
 
 EXPOSE 8082 \
        6060 \
