Add source_id filter for k8s pods to determine their source_id
[#157690935]

Signed-off-by: Jason Keene <jkeene@pivotal.io>

--- a/docker-images/fluentd/fluent.conf
+++ b/docker-images/fluentd/fluent.conf
@@ -1,6 +1,10 @@
 
 @include kubernetes.conf
 
+<filter kubernetes.**>
+  @type source_id
+</filter>
+
 <match **>
   type loggregator
   loggregator_target localhost:3458
