--- a/pipelines/release.yml
+++ b/pipelines/release.yml
@@ -103,6 +103,29 @@ resources:
     access_token: {{access-token}}
     drafts: true
 
+- name: service-metrics-release-master
+  type: git
+  source:
+    uri: git@github.com:cloudfoundry/service-metrics-release
+    branch: master
+    private_key: {{cf-loggregator-oauth-bot-key}}
+
+- name: service-metrics-release-develop
+  type: git
+  source:
+    uri: git@github.com:cloudfoundry/service-metrics-release
+    branch: develop
+    private_key: {{cf-loggregator-oauth-bot-key}}
+    disable_ci_skip: true
+
+- name: service-metrics-release-github-release-drafts
+  type: github-release
+  source:
+    user: cloudfoundry
+    repository: service-metrics-release
+    access_token: {{access-token}}
+    drafts: true
+
 - name: statsd-injector-release-master
   type: git
   source:
@@ -307,7 +330,7 @@ jobs:
   - task: download-go
     file: loggregator-ci/tasks/download-golang/task.yml
     params:
-      VERSION: &golang-version 1.10.2
+      VERSION: &golang-version 1.9.6
   - do:
     - task: bump-loggregator-release
       file: loggregator-ci/tasks/bump-golang/task.yml
@@ -853,6 +876,44 @@ jobs:
       body: github-release/body
       globs:
       - github-release/*.tgz
+
+- name: service-metrics-create-final-release
+  serial: true
+  plan:
+  - aggregate:
+    - get: service-metrics-release-develop
+    - get: service-metrics-release-master
+    - get: loggregator-ci
+  - task: create-final-release
+    file: loggregator-ci/tasks/create-final-release/task.yml
+    input_mapping:
+      to-repo: service-metrics-release-develop
+      from-repo: service-metrics-release-master
+    params:
+      S3_ACCESS_KEY: {{loggregator-team-s3-access-key}}
+      S3_SECRET_KEY: {{loggregator-team-s3-secret-key}}
+      BLOBSTORE_BUCKET: oss-service-metrics-release-blobs
+      SSH_KEY: {{loggregator-key}}
+      NEW_VERSION: 1.6.0
+      RELEASE_NAME: service-metrics-release
+      TO_BRANCH: develop
+      FROM_BRANCH: master
+  - aggregate:
+    - put: service-metrics-release-master
+      params:
+        repository: repos/from-repo
+        rebase: false
+    - put: service-metrics-release-develop
+      params:
+        repository: repos/to-repo
+        rebase: false
+    - put: service-metrics-release-github-release-drafts
+      params:
+        name: github-release/name
+        tag: github-release/tag
+        body: github-release/body
+        globs:
+        - github-release/*.tgz
 
 - name: statsd-injector-create-final-release
   serial: true
