Add group for CI images
[#157516959]

Signed-off-by: Warren Fernandes <wfernandes@pivotal.io>

--- a/pipelines/container-images.yml
+++ b/pipelines/container-images.yml
@@ -1,5 +1,12 @@
-resources:
+groups:
+- name: ci
+  jobs:
+  - build-base-image
+  - bosh10
+  - cf-deployment-concourse-tasks
+  - blackbox
 
+resources:
 - name: base-image
   type: docker-image
   source:
